Develop page to create new travel plan.

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -8,9 +8,17 @@
   </head>
   <body>
     <div class="container">
+      <header>
+        <a href="{% url 'home' %}">Home</a> 
+        <div class="nav-right">
+          <a href="{% url 'travel_new' %}">+ New travel plan</a>
+        </div>
+      </header>
+          
       {% block content %}
       {% endblock content %}
     </div>
   </body>
 </html>
+
   
