--- a/home/templates/travel.html
+++ b/home/templates/travel.html
@@ -9,6 +9,7 @@
 
   {% for travel in object_list %}
   <tr>
+    <td>{{travel.id}}</td>
     <td>{{travel.destination}}</td>
     <td>{{travel.start_date}}</td>
     <td>{{travel.end_date}}</td>
