create tarvel edit page

--- a/home/templates/travel_detail.html
+++ b/home/templates/travel_detail.html
@@ -5,6 +5,7 @@
     <p>{{ object.start_date }}</p>
     <p>{{ object.end_date }}</p>
 </div>
-
-
+<a href= "{% url 'travel_edit' travel.pk %}">+ Edit Travel Plan</a>
 {% endblock content %}
+
+
