--- a/home/templates/travel_edit.html
+++ b/home/templates/travel_edit.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Edit travel</h1>
-    <form action="" method="travel">{% csrf_token %}
+    <form action="" method="post">{% csrf_token %}
       {{ form.as_p }}
     <input type="submit" value="Update" />
 </form>
